--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,18 +13,19 @@
         android:layout_width="match_parent"
         android:layout_height="52dp"
         android:layout_gravity="center"
-        android:layout_margin="16dp" />
+        android:layout_margin="16dp"
+        android:entries="@array/beer_colors" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Find Beer" />
+        android:text="@string/find_beer" />
 
     <TextView
         android:id="@+id/brands"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Beer types" />
+        android:text="@string/brands" />
 
 </LinearLayout>
